Corrected .upcoming and .footer widths and added alignment to .message in footer.

--- a/media-queries.css
+++ b/media-queries.css
@@ -11,9 +11,7 @@
 
     .footer {
         .message {
-            small {
-                text-align: right;
-            }
+            text-align: right;
         }
     }
 }
